// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 bfhYXS"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-1 kWSTgG"
  >
    <p
      class="header__Link-djltcn-2 frAwbE"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-1 kWSTgG"
>
  <p
    class="header__Link-djltcn-2 bUJWCg"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-djltcn-0 kVsKcI"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-1 kWSTgG"
  >
    <div
      class="header__Group-djltcn-3 kXnqMt"
    >
      <p
        class="header__Link-djltcn-2 bUJWCg"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-2 bUJWCg"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-3 kXnqMt"
    >
      <div
        class="header__Search-djltcn-5 exBIPN"
      >
        <button
          class="header__SearchIcon-djltcn-6 ezDVtQ"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-4 feErrL"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-10 ksfJgh"
      >
        <button
          class="header__Picture-djltcn-8 gorSfl"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-djltcn-9 hPRGDg"
        >
          <div
            class="header__Group-djltcn-3 kXnqMt"
          >
            <button
              class="header__Picture-djltcn-8 gorSfl"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-djltcn-2 bUJWCg"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-djltcn-3 kXnqMt"
          >
            <p
              class="header__Link-djltcn-2 bUJWCg"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-1 header__Feature-djltcn-11 kWSTgG PPWOM"
  >
    <h2
      class="header__FeatureCallOut-djltcn-12 feNcxi"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-13 krMwoi"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-djltcn-15 kfgjRX"
    >
      Play
    </button>
  </div>
</div>
`;
